LightBDD
===========================================

Version 1.5.2
----------------------------------------
+ changed parameterized steps to always display constant parameter values, even if step has not been executed

Version 1.5.1.1
----------------------------------------
+ corrected HtmlResultFormatter to display long blocks of scenarios properly

Version 1.5.1
----------------------------------------
Summary:
+ added integration with MsTest framework
+ multiple improvements to Feature Summary generators
+ improved debugging experience of LightBDD scenarios
+ added XmlResultFormatterSchema.xsd
+ better support for mixing steps of simplified and extended syntax
Details:
+ extended HtmlResultFormatter to display switch to show/hide each feature and scenario details
+ extended HtmlResultFormatter to provide detailed summary about executed steps
+ improved HtmlResultFormatter css styles, added labels to check boxes
+ extended TestMetadataProvider to format stepType before is added to step name (allows to use methods like _ => Then_value_is(5))
+ reorganized example projects to show the same tests in different test frameworks
+ added integration with MsTest framework => LightBDD.MsTest
+ extended FeatureCoordinator with OnBeforeFinish / OnAfterFinish events
+ improved debugging experience of LightBDD scenarios
+ extended PlainTextResultFormatter and XmlResultFormatter to include summary blocks like in HtmlResultFormatter
+ added XmlResultFormatterSchema.xsd for FeaturesSummary.xml output xml file

Version 1.5.0
----------------------------------------
Summary:
+ fluent interface for scenario creation
+ parameterized steps support
+ capturing execution start and duration of scenarios and steps (https://github.com/Suremaker/LightBDD/issues/5)
+ improvements to HtmlResultFormatter
Details:
+ introduced IScenarioBuilder/ICustomizedScenarioBuilder fluent interfaces for scenario creation, added NewScenario() methods to AbstractBDDRunner